stupid AI changes
